--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         </div>
       </div>
     </div>
-        <!-- Reset button to reset the scores to zero. -->
-        <!-- <div>
+         <div>
           <button class="reset-button" onclick="resetScores()">Reset</button>
-          </div>     -->
+          </div>    
     </div>
     <script src="script.js"></script>
   </body>
